--- a/final/random.tex
+++ b/final/random.tex
@@ -210,6 +210,35 @@ increased effectiveness at higher orders.
 
 \subsection{Runtime Duration Results}
 
+As was discussed in \sectionname~\ref{sec:sub:sub:runtime}, it is important to determine what is being called a
+\emph{step} in the runtime complexity estimate.  In the case of the three chromatic coloring algorithms considered
+in this research, a step was defined as a call to the routine that performs the necessary processing for a state in
+the branch-and-bound algorithm's state tree.  Supposedly, the algorithm that processes the fewest states through
+better bounding has better runtime performance.  However, if we look a little closer at the algorithms, it becomes
+clear that the amount of processing in each ``step'' varies significantly between the three algorithms:
+\begin{description}
+\item[Christofides/Wang:] Executes Bron Kerbosch, scans the MIS result set for the least occurring vertex, then
+  scans the MIS result set again to extract the MISs containing the target vertex.
+\item [Zykov:] Executes the Edwards Elphick algorithm to determine the current lower bound and compares it to the
+  adjusted \(k_{max}\) to check for bounding.
+\item [Proposed:] The maximum edge test, the small subset test, calculates the number of common neighbors between
+  each pair of vertices, contracts neighborhood subsets, the minimum common neighbor upper bound test, and the
+  standard Zykov bounding test.
+\end{description}
+
+The most lightweight processing is the plain Zykov algorithm, which uses a single P-time step.  The proposed
+algorithm uses two P-time steps: the common neighbor calculation and the Edwards Elphick algorithm, and may run
+these steps multiple times per state if vertices are removed or contracted.  The Christofides/Wang algorithm uses
+the exponential Bron Kerbosch algorithm.  All three algorithms require a P-time step to create the graph for the
+next branch.
+
+The runtime duration results for the three algorithms at \(n=10\), \(n=15\), and \(n=20\) are shown in
+\figurename~\ref{fig:duration10}, \figurename~\ref{fig:duration15}, and \figurename~\ref{fig:duration20},
+respectively.  \(100\) trials were performed for each edge probability.  To be fair, the initial Bron Kerbosch and
+greedy steps could be used in combination with any of the algorithms, so only random graphs where the chromatic
+number lower and upper bounds do not match were considered.  The results are rather astounding.  In fact, the
+author didn't quite believe them at first and made sure that they were correct and reproducible.
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{duration_10}
@@ -230,3 +259,68 @@ increased effectiveness at higher orders.
   \caption{Runtime durations at \(n=20\).}
   \label{fig:duration20}
 \end{figure}
+
+The runtime durations for the three algorithms are exactly the same!  Thus, any of the algorithms would be suitable
+for the desired designers tool that this reseach set out to find.  In fact, the basic Zykov algorithm is simpler
+than the other two and certainly uses less space than the Christofides/Wang algorithm, so the plain Zykov algorithm
+may be the best choice.
+
+\subsection{The Nature of Information}
+
+The random graph analysis results suggest what may be an inherent and important principle of the nature of
+information.  Before stating this principle, first consider that two pieces of information may be coupled or
+uncoupled, as demonstrated in \figurename~\ref{fig:info}.
+
+\begin{figure}[H]
+  \begin{minipage}{2.5in}
+    \centering
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \node (i1) at (0,0) {\(I_1\)};
+      \node (i2) [right=of i1] {\(I_2\)};
+      \draw [<->] (i1) edge (i2);
+    \end{tikzpicture}
+
+    COUPLED
+  \end{minipage}
+  \begin{minipage}{2.5in}
+    \centering
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \node (i1) at (0,0) {\(I_1\)};
+      \node (i2) [right=of i1] {\(I_2\)};
+    \end{tikzpicture}
+
+    UNCOUPLED
+  \end{minipage}
+  \caption{Couple and uncouple information.}
+  \label{fig:info}
+\end{figure}
+
+Examples of coupled information include the gravitational or electromagnetic forces between bodies; by examining
+one body one can make some conclusions about the second body.  An example of uncoupled information is the vertices
+of a graph: given one vertex, one cannot make any further conclusions about a second without ``touching'' the
+second in some fashion, be it the vertex itself, the incident edge between the two vertices, or an eigenvalue in
+spectral graph theory.
+
+When applying an algorithm to uncouple data, such as the vertices in a graph, there are two questions that are
+constantly asked:
+\begin{enumerate}
+\item How are two pieces of uncoupled information to be combined into a new piece of information.
+\item Have enough pieces of information been addressed in order to come to a conclusion.
+\end{enumerate}
+An example of the first question is whether or not two vertices should be assigned the same color.  An example of
+the second question is whether or not a current coloring constructed from asking the first question multiple times
+has more colors than an earlier completed construction and so can be discarded.  Of course, this is the nature of a
+branch-and-bound algorithm.
+
+The inherent and important principle is that to answer the first question one \emph{must} ``touch'' all of the
+relevant pieces of uncoupled information; there are no shortcuts.  Trying to do otherwise is analogous to trying to
+construct a perpetual motion machine.  This is the nature of an inherently intractable problem.  Of course, one
+tries to touch a minimum amount of information and in particular tries to touch the same uncouple bit of information
+a minimum number of times.
+
+By adding the Bron Kerbosch/greedy algorithm phase to all three of the algorithms, it appears that the graphs that
+would require excessive information touching according to the specifics of each algorithm are eliminated, and thus
+the speed advantages of certain algorithms are also eliminated.  What is left are those graphs where multiple
+touching of information is required and no speed advantage is possible.  Therefore, for those graphs, the three
+algorithms compared in this research just touch the same information but in slightly different ways.  In the end,
+one type of touch is no better than the other.
