Finished final draft

--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -491,7 +491,7 @@ Christofides~(1971)~\cite{christofides}.
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{christofides}
-  \caption{Nicos Christofides in an unknown East Coast airport.}
+  \caption{Nicos Christofides in an unknown East Coast airport~\cite{lotus}.}
   \label{fig:pic:christofides}
 \end{figure}
 
@@ -758,7 +758,7 @@ mathematician Alexandre A. Zykov.
 \begin{figure}[H]
   \centering
   \includegraphics[width=5in]{zykov}
-  \caption{Varim Vizing, Alexandre Zykov, and Vitaly Voloshin in Odessa, Ukraine.}
+  \caption{Varim Vizing, Alexandre Zykov, and Vitaly Voloshin in Odessa, Ukraine~\cite{voloshin}.}
   \label{fig:pic:zykov}
 \end{figure}
 
