--- a/final/design.tex
+++ b/final/design.tex
@@ -390,12 +390,12 @@ Determining solid requirements for the maximum number of FRs and the target edge
 study by a qualified mechanical engineer; however, the examples submitted by our colleagues at SUNY, Buffalo all
 have under \(20\) FRs with low to average edge density.  These values seem reasonable: designs with too many FRs
 may become untenable and hence broken up into multiple layers in the design hierarchy and designs with too many
-edges may be too coupled.  Although acceptable duration time is subjective, a limit of about \(2\) minutes will be
+edges may be too coupled.  Although acceptable duration time is subjective, a limit of about one minute will be
 selected as the goal.
 
 Thus, the primary goal of this research is to provide AD designers with a tool that can determine the minimum
 number of parts needed to realize a particular design having about \(20\) FRs and less than \(50\%\) edge density
-in less than \(2\) minutes.  Designs with different minimum parts requirements can then be compared during the
+in less than one minute.  Designs with different minimum parts requirements can then be compared during the
 analytical process phase of the axiomatic design as part of the overall process of selecting the best design.  Of
 course, this tool will be an algorithm that can be run on a computer.
 
