--- a/final/random.tex
+++ b/final/random.tex
@@ -265,7 +265,7 @@ for the desired designers tool that this reseach set out to find.  In fact, the 
 than the other two and certainly uses less space than the Christofides/Wang algorithm, so the plain Zykov algorithm
 may be the best choice.
 
-\subsection{The Nature of Information}
+\subsection{The Nature of Information}\label{sec:sub:info}
 
 The random graph analysis results suggest what may be an inherent and important principle of the nature of
 information.  Before stating this principle, first consider that two pieces of information may be coupled or
@@ -291,7 +291,7 @@ uncoupled, as demonstrated in \figurename~\ref{fig:info}.
 
     UNCOUPLED
   \end{minipage}
-  \caption{Couple and uncouple information.}
+  \caption{Coupled and uncoupled information.}
   \label{fig:info}
 \end{figure}
 
@@ -301,7 +301,7 @@ of a graph: given one vertex, one cannot make any further conclusions about a se
 second in some fashion, be it the vertex itself, the incident edge between the two vertices, or an eigenvalue in
 spectral graph theory.
 
-When applying an algorithm to uncouple data, such as the vertices in a graph, there are two questions that are
+When applying an algorithm to uncoupled data, such as the vertices in a graph, there are two questions that are
 constantly asked:
 \begin{enumerate}
 \item How are two pieces of uncoupled information to be combined into a new piece of information.
