--- a/final/references.bib
+++ b/final/references.bib
@@ -134,6 +134,13 @@
   pages={109-122}
 }
 
+@misc{lotus,
+  title={Meeting with a Man that Met {F}eynman},
+  author={Lotus, Crystal},
+  howpublished={\url{https://cryztallotus.wordpress.com/meeting-with-a-man-who-met-feynman}},
+  note={Accessed: 2019-12-31}
+}
+
 @article{mcdiarmid,
   author={McDiarmid, Colin},
   title={Determining the Chromatic Number of a Graph},
@@ -210,6 +217,13 @@
   address={Singapore},
   year={2016},
   pages={101--144}
+}
+
+@misc{voloshin,
+  title={Dedicated to the \(90^{th}\) Anniversary of {A}. {A}. {Z}ykov},
+  author={Voloshin, Vitaly},
+  howpublished={\url{https://www.researchgate.net/publication/258441392_Zykov_90_Voloshin}},
+  note={Accessed: 2019-12-31}
 }
 
 @article{wang,
