--- a/final/conclusions.tex
+++ b/final/conclusions.tex
@@ -1,1 +1,47 @@
 \section{Conclusions}\label{sec:conclusions}
+
+The primary goal of this research was to select a chromatic coloring algorithm that could be used in a part
+consolidation tool for AD designers.  The tool needs to handle input FR design graphs with up to \(20\)
+vertices and moderate (\(50\%\)) edge density and must be able to deliver an answer in under one minute.
+
+Three algorithms were considered:
+\begin{enumerate}
+\item The Christofides Algorithm~(\sectionname~\ref{sec:sub:christofides}) with the
+  Wang improvements~(\sectionname~\ref{sec:sub:wang})
+\item The Zykov algorithm~(\sectionname~\ref{sec:sub:zykov})
+\item A new proposed algorithm~(\sectionname~\ref{sec:algorithm})
+\end{enumerate}
+
+These three algorithms were originally compared using empirical runtime complexity values obtained from a random
+graph analysis.  For the purposes of this analysis, a step was defined to be a call to a routine that performs all
+of the necessary processing for a state in an algorithms state tree.  The results are shown in
+\tablename~\ref{tab:rtresults}.
+
+\begin{table}[H]
+  \centering
+  \caption{Runtime Complexity Comparison for the Three Chromatic Coloring Algorithms}
+  \label{tab:rtresults}
+  \begin{tabular}{|c|c|}
+    \hline
+    ALGORITHM & RUNTIME COMPLEXITY \\
+    \hline
+    Christofides/Wang & \(\BO(1.0045^{n^2})\) \\
+    \hline
+    Zykov & \(\BO(3.3^n)\) \\
+    \hline
+    Proposed & \(\BO(1.0103^{n^2})\) \\
+    \hline
+  \end{tabular}
+\end{table}
+
+Assuming that number of states processed translates to runtime duration, tt would seem that the Christofides/Wang
+algorithm has a slight speed advantage.  However, it was noted that the initial chromatic number lower and upper
+bound estimate test that was presented as part of the new proposed algorithm could be added to the two well-known
+algorithms.  Thus, a runtime duration test was performed limited to random graphs where the estimated lower and
+upper bounds do not match.  The results presented in \sectionname~\ref{sec:random} showed that the three algorithms
+took exactly the same amount of time to produce a solution, which was well under the one minute requirement.  This
+led to certain ideas about the nature of uncoupled information and inherently intractable problems that were
+discussed in \sectionname~\ref{sec:sub:info}.
+
+Although all three algorithms are suitable for the desired design tool, the simplicity of the basic Zykov algorithm
+and its efficient use of space indicate that it is the best choice.
