--- a/final/design.tex
+++ b/final/design.tex
@@ -399,10 +399,7 @@ in less than one minute.  Designs with different minimum parts requirements can 
 analytical process phase of the axiomatic design as part of the overall process of selecting the best design.  Of
 course, this tool will be an algorithm that can be run on a computer.
 
-This research compares the two most well-known existing algorithms: the Christofides algorithm~\cite{christofides}
-with improvements by Wang~\cite{wang} and the Zykov algorithm~\cite{corneil}.  A new algorithm is then proposed that
-is a modification of the Zykov algorithm with the goal of outperforming the existing algorithms.  At first glance,
-although all three algorithms satisfy the stated requirements, the Christofides/Wang algorithm will seem to be the
-fastest.  However, a closer examination and a small tweak to the existing algorithms suggested by the new algorithm
-will lead to the final conclusion that any of the three algorithms would be suitable for use in the desired
-design tool.
+This research compares the two most well-known existing algorithms for determining the chromatic number of a graph:
+the Christofides algorithm~\cite{christofides} with improvements by Wang~\cite{wang} and the Zykov
+algorithm~\cite{corneil}.  A new algorithm is then proposed that is a modification of the Zykov algorithm with the
+goal of outperforming the existing algorithms.
