--- a/final/random.tex
+++ b/final/random.tex
@@ -84,7 +84,7 @@ The runtime complexity for new graph construction ignoring memory allocation is 
 \item Adding the edge to the connection matrix and incrementing the endpoint vertex degrees is \(\BO(1)\).
 \end{itemize}
 
-The worst case is a complete graph with on the order of \(n^2\) edges.  Therefore, the runtime complexity for
+The worst case is a complete graph with \(\BO(n^2)\) edges.  Therefore, the runtime complexity for
 constructing a new graph is \(\BO(n^2\log(n))\).
 
 \subsection{Runtime Complexity Results}\label{sec:sub:runtime}
