Various edits and fixes

--- a/final/algorithm.tex
+++ b/final/algorithm.tex
@@ -338,7 +338,7 @@ will produce an exact result for the chromatic number of a graph.  The removed v
 such an ordering.  Consider the example shown in \figurename~\ref{fig:reverse}.  If \(k=4\) and vertex \(v\) is to
 be removed since \(\deg(v)=3\), then in the reverse direction when \(v\) is added the fourth color is available for
 \(v\).  In general, given a graph \(G-v\) such that \(deg(v)<k\) in \(G\), there will always be an available color
-for \(v\) regardless of how \(N(v)\) is colored.  This result is formalized in \theoremname~\ref{thm:lowdeg}.
+for \(v\) regardless of how \(N(v)\) is colored.  This result is formalized in \theoremname~\ref{thm:remone}.
 
 \begin{figure}[H]
   \centering
