--- a/final/casestudy.tex
+++ b/final/casestudy.tex
@@ -1,7 +1,7 @@
 \section{Toaster Design Case Study}
 
-This section contains a simplistic case study of how a chromatic number part consolidation tool would be used by a
-designer: the FR graphs for two slightly different designs of a basic kitchen toaster similar to that shown in
+This section contains a simplistic case study of how a chromatic number part consolidation tool would be used by an
+AD designer: the FR graphs for two slightly different designs of a basic kitchen toaster similar to that shown in
 \figurename~\ref{fig:toaster} are compared.
 
 \begin{figure}[H]
