--- a/final/random.tex
+++ b/final/random.tex
@@ -12,26 +12,26 @@ system contains 8 i7-7780 3.6GHz cores and 20Gb of memory.  The graphing softwar
 Although many present day researchers may choose Java or Python, the author feels that the interpretive nature of
 those languages combined with unpredictable garbage collection leads to overly inflated and inconsistent results.
 
-The representation of a graph in memory needs to convey the list of vertices, the list of edges, and the connection
-matrix.  Graph mutations that change the number of vertices are complex because the connection matrix must be
+The representation of a graph in memory needs to convey the list of vertices, the list of edges, and the adjacency
+matrix.  Graph mutations that change the number of vertices are complex because the adjacency matrix must be
 rebuilt from the altered vertex and edge lists.  Thus, the testbed software assumes that graphs are invariant with
 respect to vertex removals and contractions; if vertex removal or contraction is desired then a new graph instance
-must be constructed.  Edge additions are innocuous: the new edge can be marked in the connection matrix and
+must be constructed.  Edge additions are innocuous: the new edge can be marked in the adjacency matrix and
 appended to the edge list.
 
 The general layout of a graph instance in memory is shown in \figurename~\ref{fig:layout}.  The vertex and edge
 lists are vectors of instances that contain the needed vertex and edge attibutes.  In a particular graph, a vertex
 or edge is identified by its position in its list, called its number: vertex numbers are from \(0\) to \(n-1\) and
-edge numbers are from \(0\) to \(m-1\).  The connection matrix is a two-dimensional matrix indexed by vertex
+edge numbers are from \(0\) to \(m-1\).  The adjacency matrix is a two-dimensional matrix indexed by vertex
 numbers: entry \(M[i,j]\) returns a list of edge numbers that can be used to index the edge list to locate the
 edges.  If the edge list is empty then the two vertices are not adjacent.  Note that for simple graphs, each edge
-list has at most one entry and the connection matrix is symmetric: \(M[i,j]=M[j,i]\).
+list has at most one entry and the adjacency matrix is symmetric: \(M[i,j]=M[j,i]\).
 
 \begin{figure}[H]
   \centering
   \begin{tikzpicture}[node distance=0in]
     \node (c) [draw, rectangle, minimum height=1in, minimum width=1.5in] at (0,0)
-          {\begin{tabular}{c} connection \\ matrix \end{tabular}};
+          {\begin{tabular}{c} adjacency \\ matrix \end{tabular}};
     \node (v) [draw, rectangle, minimum height=1in, minimum width=1.5in, below=of c]
           {\begin{tabular}{c} vertex \\ list \end{tabular}};
     \node (e) [draw, rectangle, minimum height=1in, minimum width=1.5in, below=of v]
@@ -59,8 +59,8 @@ the original graph.
 
 One of the most important parameters used by graph algorithms is vertex degree.  As was explained in
 \sectionname~\ref{sec:sub:adjacency}, the degree of vertex \(v_i\) can be calculated by summing the \(i^{th}\) row
-or column in the connection matrix.  So that degrees do not have to be recalculated each time they are used, the
-connection matrix precalculates vertex degrees upon graph creation: each time an edge is added the degrees of the
+or column in the adjacency matrix.  So that degrees do not have to be recalculated each time they are used, the
+adjacency matrix precalculates vertex degrees upon graph creation: each time an edge is added the degrees of the
 endpoint vertices are incremented.  The minimum and maximum degrees for a graph still need to be recalculated each
 time, so algorithms should cache those values once fetched.
 
@@ -69,9 +69,9 @@ as efficient as possible.  The testbed software creates a new graph using the fo
 \begin{enumerate}
 \item Each of the \(n\) vertices are added to the new vertex list and a corresponding entry is added to the vertex
   ID to number lookup table.
-\item An empty \(n\times n\) connection matrix is allocated with all vertex degrees set to \(0\).
+\item An empty \(n\times n\) adjacency matrix is allocated with all vertex degrees set to \(0\).
 \item Each edge is added to the edge list.  The endpoint vertex IDs are found in the lookup table and the edge is
-  registered in the connection matrix, which increments the degrees for the endpoint vertices.
+  registered in the adjacency matrix, which increments the degrees for the endpoint vertices.
 \end{enumerate}
 
 The runtime complexity for new graph construction ignoring memory allocation is determined as follows:
@@ -81,7 +81,7 @@ The runtime complexity for new graph construction ignoring memory allocation is 
   lookup table is \(\BO(\log(n))\).
 \item Appending an edge onto the edge list is \(\BO(1)\).
 \item Finding each edge's two endpoint vertex numbers in the lookup table is \(\BO(\log(n))\).
-\item Adding the edge to the connection matrix and incrementing the endpoint vertex degrees is \(\BO(1)\).
+\item Adding the edge to the adjacency matrix and incrementing the endpoint vertex degrees is \(\BO(1)\).
 \end{itemize}
 
 The worst case is a complete graph with \(\BO(n^2)\) edges.  Therefore, the runtime complexity for
@@ -109,7 +109,7 @@ decrease in the mean number of states traversed of as much as \(85\%\).
 
 \figurename~\ref{fig:qzruntime} shows the maximum number of calls (log base 2) for each order at \(50\%\) edge
 possibility.  A polynomial curve fit to the data indicates a runtime complexity of about
-\(\BO(2^{0.0148})\approx\BO(1.0103^{n^2})\).
+\(\BO(2^{0.0148n^2})\approx\BO(1.0103^{n^2})\).
 
 \begin{figure}[H]
   \centering
@@ -120,7 +120,7 @@ possibility.  A polynomial curve fit to the data indicates a runtime complexity 
 
 When \figurename~\ref{fig:qzruntime} is compared to the Christofides/Wang results in
 \figurename~\ref{fig:cfruntime}, it can be seen that Christofides/Wang runtime complexity is a bit better:
-\(\BO(1.0045^{n^2})\) versus \(BO(1.0103^{n^2})\).  This means that even though the proposed algorithm performs
+\(\BO(1.0045^{n^2})\) versus \(\BO(1.0103^{n^2})\).  This means that even though the proposed algorithm performs
 better in the target range, it will eventually lose to Christofides/Wang.  Based on the equations for the two curve
 fits, the break-even point appears to be at about \(n=37\).
 
@@ -174,7 +174,7 @@ a candidate for elimination outside of the target range of \(n<20\).
 
 The effectiveness of contracting neighborhood subsets, measured as hits/tries, is shown in
 \figurename~\ref{fig:qzsubset}.  This test appears to maintain a decent level of effectiveness at higher orders.
-The is not so surprising because more vertices and edges provide more subset opportunities.
+This is not so surprising because more vertices and edges provide more subset opportunities.
 
 \begin{figure}[H]
   \centering
@@ -268,6 +268,4 @@ Mycielski graphs have much more symmetry.  It may be that the proposed and Wang/
 suitable to take advantage of that symmetry.
 
 Due to equal performance for most graphs and better performance for some graphs, the proposed or Christofides/Wang
-algorithms appear to be better general case solutions.  Furthermore, due to the excessive space requirements of the
-Christofides algorithm even with the Wang improvements, the proposed algorithm is a better selection for the
-desired design tool.
+algorithms appear to be better general case solutions.
