--- a/final/theory.tex
+++ b/final/theory.tex
@@ -230,7 +230,7 @@ uses at most 5 colors (actually only 4), which is the cardinality of the codomai
   \(\abs{C}=k\).  Let \(V(G)=\set{v_1,\ldots,v_n}\) and let \(C=\set{c_1,\cdots,c_k}\).  Now, let
   \(C'=\set{c_1,\cdots,c_{k+r}}\) and define \(c':V(G)\to C'\) by:
   \[c'(v)=c(v)\]
-  Assume that \(u\) and \(v\) are two nonadjacent vertices in \(G\): \(uv\notin E(G)\).  Since \(c\) is proper:
+  Assume that \(u\) and \(v\) are two adjacent vertices in \(G\): \(uv\in E(G)\).  Since \(c\) is proper:
   \[c'(u)=c(u)\ne c(v)=c'(v)\]
   and so \(c'\) is proper with \(\abs{C'}=k+r\).
 
@@ -250,8 +250,8 @@ since there are sufficient colors to assign each vertex its own unique color.  T
   Assume \(n\le k\).  Let \(V(G)=\set{v_1,\ldots,v_n}\) and let \(C=\set{c_1,\ldots,c_k}\).  Now, define
   \(c:V(G)\to C\) by:
   \[c(v_i)=c_i\]
-  which is possible since, by assumption, \(n\le k\).  Finally, assume that \(v_i\) and \(v_j\) are two nonadjacent
-  vertices in \(G\): \(v_iv_j\notin E(G)\).  Since the \(c_i\) are distinct:
+  which is possible since, by assumption, \(n\le k\).  Finally, assume that \(v_i\) and \(v_j\) are two adjacent
+  vertices in \(G\): \(v_iv_j\in E(G)\).  Since the \(c_i\) are distinct:
   \[c(v_i)=c_i\ne c_j=c(v_j)\]
   and so \(c\) is proper with \(\abs{C}=k\).
 
@@ -572,7 +572,7 @@ Thus, only edges are removed --- no vertices are removed.  If \(X\ne\emptyset\) 
 
     \(G-\set{ae,be}\)
   \end{minipage}
-  \caption{An Edge removal example.}
+  \caption{An edge removal example.}
   \label{fig:eremove}
 \end{figure}
 
@@ -1006,7 +1006,7 @@ But if there exists a \(u-v\) walk in a graph \(G\), does this also mean that th
       \label{fig:rmiddle}
     \end{figure}
 
-  Let \(P'=(u=w_0,w_1,\ldots,w_i,w_{j+1},\ldots,w_{\ell}=v)\) be the walk shown in green in the
+  Let \(P'=(u=w_0,w_1,\ldots,w_i,w_{j+1},\ldots,w_{\ell}=v)\) be the walk shown in green in
   \figurename~\ref{fig:rmiddle}.  \(P'\) is a \(u-v\) walk of length \(\ell-(j-i)<\ell\) in \(G\).
   \end{description}
 
@@ -1486,15 +1486,15 @@ An example graph and its adjacency matrix are shown in \figurename~\ref{fig:adja
       0 & 1 & 1 & 1 \\
       1 & 0 & 1 & 0 \\
       1 & 1 & 0 & 1 \\
-      1 & 0 & 1 & 1
+      1 & 0 & 1 & 0
     \end{bmatrix}\]
   \end{minipage}
   \caption{A graph and its adjacency matrix.}
   \label{fig:adjacency}
 \end{figure}
 
-The degree of vertex \(v_i\) can be calculated by summing the \(i^{th}\) row or the \(i^{th}\) column:
-\[\deg(v_i)=\sum_{k=1}^na_{ik}=\sum_{k=1}^na_{ki}\]
+The degree of vertex \(v_i\) can be calculated by summing the \(i^{th}\) row or the \(j^{th}\) column:
+\[\deg(v_i)=\sum_{k=1}^na_{ik}=\sum_{k=1}^na_{kj}\]
 The minimum \((\dmin(G))\) and maximum \((\dmax(G))\) degree values can then be calculated by selecting the minimum
 and maximum calculated degree values.
 
